# nfinityai-backend

./: .gitignore  README.md  dc.sh  docker-compose.yml  nginx.conf
backend_api/: alembic.ini  pyproject.toml
backend_api/docker/: Dockerfile
backend_api/migrations/: env.py
backend_api/migrations/versions/: 050eb3fe0362_added_base_models.py  15174911335c_nfnt_enum.py  227e5b308147_add_icon.py  270f8ec53461_add_user_model.py  3b24d974316c_add_models_table.py  4d42abe874c8_add_transaction_table.py  6564756dc2e6_add_balance_popup_model.py  9599da653f05_add_usage_table.py  9b601a627111_add_category_table.py  c63fc4d52f09_add_datetime_columns.py  e14cd248183c_add_web3_events.py  e7028ac2415d_add_balance_table.py  f29c343d9e9f_add_transaction_column_to_usage.py
backend_api/src/backend_api/: admin.py  cache.py  main.py  utils.py
backend_api/src/backend_api/api/: router.py
backend_api/src/backend_api/api/endpoints/: auth.py  balance.py  media.py  model_providers.py  models.py  runs.py  transactions.py  users.py
backend_api/src/backend_api/backend/: config.py  logging.py  session.py  storage.py  tasks.py
backend_api/src/backend_api/backend/data/: contract_abi.json
backend_api/src/backend_api/exceptions/: __init__.py  balance.py  web3.py
backend_api/src/backend_api/models/: __init__.py  balance.py  categories.py  models.py  usage.py  users.py  web3.py
backend_api/src/backend_api/schemas/: auth.py  balance.py  categories.py  media.py  model_providers.py  models.py  runs.py  tokens.py  usage.py  users.py  web3.py
backend_api/src/backend_api/services/: auth.py  balance.py  balance_popup.py  base.py  categories.py  coingecko.py  etherscan.py  model_providers.py  models.py  runs.py  transaction.py  usage.py  users.py  web3.py
backend_api/src/backend_api/tasks/: __init__.py  update_balance_popups.py  update_categories.py  update_models.py  update_web3_events.py
provider_api_gateway/: .gitmodules  pyproject.toml
provider_api_gateway/docker/: Dockerfile
provider_api_gateway/src/provider_api_gateway/: config.py  main.py  utils.py
provider_api_gateway/src/provider_api_gateway/api/: router.py
provider_api_gateway/src/provider_api_gateway/api/endpoints/: base.py  providers.py  replicate.py  vastai.py
provider_api_gateway/src/provider_api_gateway/providers/: base.py  exceptions.py  replicate.py
provider_api_gateway/src/provider_api_gateway/schemas/: categories.py  models.py  runs.py  types.py
(+8 files in other folders)
