[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["GolemXIV <golemxiv@noreply.localhost>"]
packages = [
    { include = "backend_api", from = "src"},
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
uvicorn = "^0.29.0"
aiohttp = "^3.9.5"
aiohttp-retry = "^2.8.3"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.18"
siwe = "^4.0.0"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pandas = "^2.2.2"
apscheduler = "^3.10.4"
structlog = "^24.4.0"
starlette-admin = "^0.14.1"
itsdangerous = "^2.2.0"
aiocache = "^0.12.2"
web3 = "^6.20.1"
sqlalchemy-file = "^0.6.0"
pillow = "^10.4.0"
fasteners = "^0.19"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
