[tool.poetry]
name = "provider-api-gateway"
version = "0.1.0"
description = ""
authors = ["GolemXIV <golemxiv@noreply.localhost>"]
packages = [
    { include = "provider_api_gateway", from = "src"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
aiohttp = "^3.9.5"
aiohttp-retry = "^2.8.3"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
